@@ -1,5 +1,5 @@
 #if !defined(lint) && !defined(__INSIGHT__)
-static const char libbk__rcsid[] = "$Id: bdtee.c,v 1.2 2003/10/20 22:56:11 jtt Exp $";
+static const char libbk__rcsid[] = "$Id: bdtee.c,v 1.3 2003/10/21 19:02:45 jtt Exp $";
 static const char libbk__copyright[] = "Copyright (c) 2003";
 static const char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -55,7 +55,9 @@ struct program_config
 {
   // XXX - customize here
   bk_flags		pc_flags;		///< Flags are fun!
-#define PC_VERBOSE	0x001			///< Verbose output
+#define PC_VERBOSE		0x001		///< Verbose output
+#define PC_LAST_WRITE_NEWLINE	0x002		///< Last write to tee file terminated in '\n
+#define PC_NO_TEE		0x004		///< No more write to tee file.
   char *		pc_prog1;
   char *		pc_prog2;
   struct bk_run	*	pc_run;			///< Run structure.
@@ -65,23 +67,8 @@ struct program_config
   struct bk_ioh *	pc_last_peer;		///< IOH of the last peer to write
 };
 
-#define FROM_PEER1 "\n<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<\n"
-#define FROM_PEER2 "\n>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>\n"
-
-struct bk_vptr from_peer1 =
-{
-  FROM_PEER1,
-  sizeof(FROM_PEER1)-1,
-};
-
-
-struct bk_vptr from_peer2 =
-{
-  FROM_PEER2,
-  sizeof(FROM_PEER2)-1,
-};
-
-
+#define FROM_PEER1 "<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<"
+#define FROM_PEER2 ">>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>"
 
 static int proginit(bk_s B, struct program_config *pc);
 static void relay_tee(bk_s B, void *opaque, struct bk_ioh *read_ioh, struct bk_ioh *write_ioh, bk_vptr *data,  bk_flags flags);
@@ -280,14 +267,17 @@ static int proginit(bk_s B, struct program_config *pc)
     bk_error_printf(B, BK_ERR_ERR, "Could not create run struct\n");
     goto error;
   }
-  
+
+  // Top of file starts with a new line. 
+  BK_FLAG_SET(pc->pc_flags, PC_LAST_WRITE_NEWLINE);
+
   if ((fd = open(pc->pc_outfile, O_WRONLY | O_CREAT | O_TRUNC, S_IRUSR | S_IWUSR | S_IRGRP | S_IROTH)) < 0)
   {
     bk_error_printf(B, BK_ERR_ERR, "Could not open %s: %s\n", pc->pc_outfile, strerror(errno));
     goto error;
   }
 
-  if (!(pc->pc_out_ioh = bk_ioh_init(B, -1, fd, out_file_handler, NULL, 0, 0, 0, pc->pc_run, BK_IOH_RAW | BK_IOH_STREAM)))
+  if (!(pc->pc_out_ioh = bk_ioh_init(B, -1, fd, out_file_handler, pc, 0, 0, 0, pc->pc_run, BK_IOH_RAW | BK_IOH_STREAM)))
   {
     bk_error_printf(B, BK_ERR_ERR, "Could not create ioh for out file\n");
     goto error;
@@ -378,6 +368,9 @@ relay_tee(bk_s B, void *opaque, struct bk_ioh *read_ioh, struct bk_ioh *write_io
   
   if (data)
   {
+    if (BK_FLAG_ISSET(pc->pc_flags, PC_NO_TEE))
+      BK_VRETURN(B);      
+
     // Copy data to output file.
     if (!BK_MALLOC(outbuf))
     {
@@ -392,11 +385,11 @@ relay_tee(bk_s B, void *opaque, struct bk_ioh *read_ioh, struct bk_ioh *write_io
     memmove(outbuf->ptr, data->ptr, data->len);
     outbuf->len = data->len;
     
-    if ((pc->pc_last_peer != read_ioh) &&
-	(bk_ioh_write(B, pc->pc_out_ioh, (read_ioh==pc->pc_peer1_ioh)?&from_peer1:&from_peer2, 0) < 0))
+    if (pc->pc_last_peer != read_ioh)
     {
-	bk_error_printf(B, BK_ERR_ERR, "Failed to write out peer indicator\n");
-	goto error;
+      bk_ioh_printf(B, pc->pc_out_ioh, "%s%s\n", 
+		    BK_FLAG_ISCLEAR(pc->pc_flags, PC_LAST_WRITE_NEWLINE)?"\n":"",
+		    (read_ioh==pc->pc_peer1_ioh)?FROM_PEER1:FROM_PEER2);
     }
     
     pc->pc_last_peer = read_ioh;
@@ -406,11 +399,18 @@ relay_tee(bk_s B, void *opaque, struct bk_ioh *read_ioh, struct bk_ioh *write_io
       bk_error_printf(B, BK_ERR_ERR, "Failed to write out buffer\n");
       goto error;
     }
+    
+    if (((char *)outbuf->ptr)[outbuf->len-1] == '\n')
+      BK_FLAG_SET(pc->pc_flags, PC_LAST_WRITE_NEWLINE);
+    else
+      BK_FLAG_CLEAR(pc->pc_flags, PC_LAST_WRITE_NEWLINE);
   }
   else
   {
     // We're shuting down, so close the output file.
-    bk_ioh_close(B, pc->pc_out_ioh, 0);
+    // If a write error had occured then this ioh == NULL
+    if (pc->pc_out_ioh)
+      bk_ioh_close(B, pc->pc_out_ioh, 0);
     bk_run_set_run_over(B, pc->pc_run);
   }
   
@@ -432,8 +432,9 @@ relay_tee(bk_s B, void *opaque, struct bk_ioh *read_ioh, struct bk_ioh *write_io
 static void out_file_handler(bk_s B, bk_vptr data[], void *opaque, struct bk_ioh *ioh, bk_ioh_status_e state_flags)
 {
   BK_ENTRY(B, __FUNCTION__,__FILE__,"bdtee");
+  struct program_config *pc = (struct program_config *)opaque;
 
-  if (!ioh || opaque) // opaque should be NULL
+  if (!ioh || !pc) // opaque should be NULL
   {
     bk_error_printf(B, BK_ERR_ERR, "Illegal arguments\n");
     BK_VRETURN(B);
@@ -449,17 +450,16 @@ static void out_file_handler(bk_s B, bk_vptr data[], void *opaque, struct bk_ioh
     break;
     
   case BkIohStatusIohWriteError:
-    // Ahh what do do....
+    bk_error_printf(B, BK_ERR_ERR, "Error detected during write. Terminating tee. Continuing relay.\n");
+    BK_FLAG_SET(pc->pc_flags, PC_NO_TEE);
+    bk_ioh_close(B, pc->pc_out_ioh, 0);
+    pc->pc_out_ioh = NULL;
     break;
 
   case BkIohStatusWriteComplete:
   case BkIohStatusWriteAborted:
-    if (data && !((data == &from_peer1) || (data == &from_peer2)))
-    {
-      if (data[0].ptr)
-	free(data[0].ptr);
-      free(data);
-    }
+    free(data[0].ptr);
+    free(data);
     break;
 
   case BkIohStatusIohClosing:
